// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`suite.get() > exposed methods > Should have all exposed methods 1`] = `
{
  "dump": [Function],
  "errorCount": 0,
  "errors": [],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 0,
  "tests": {},
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`suite.run() > exposed methods > Should have all exposed methods 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 0,
  "errors": [],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 0,
  "tests": {},
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
